# study.ai

./: .gitignore  Readme.md
crewai/financial_analyst/src/financial_analyst_crew/: main.py
docs/ollama/: Readme.md
ollama/: Readme.md
pocs/crewai/1.financial_analyst/: pyproject.toml
pocs/crewai/1.financial_analyst/src/financial_analyst_crew/: crew.py
pocs/crewai/1.financial_analyst/src/financial_analyst_crew/config/: agents.yaml  tasks.yaml
pocs/crewai/2.trip_planner/: .env.example  Readme.md  agents.py  main.py  pyproject.toml  requirements.txt  tasks.py  tools.py
pocs/crewai/2.trip_planner/src/trip_planner_crew/: crew.py  main.py
pocs/crewai/2.trip_planner/src/trip_planner_crew/config/: agents.yaml  tasks.yaml
pocs/crewai/2.trip_planner/src/trip_planner_crew/tools/: browser_tools.py  calculator_tool.py
pocs/crewai/3.blogger/: Readme.md  main.py
pocs/crewai/4.rag/: .env.example  .gitignore  Readme.md  main.py  main2.py  requirements.txt  test.py
pocs/crewai/financial_analyst/: Readme.md
pocs/crewai/financial_analyst/src/financial_analyst_crew/config/: agents.yaml
pocs/crewai/financial_analyst/src/financial_analyst_crew/tools/: sec_tools.py
pocs/embedchain/doc_search/: .env.example  .gitignore  Readme.md  main.py  ollama_embedchain.yaml  requirements.txt
pocs/embedchain/huggingface/: .env.example  .gitignore  Readme.md  main.py  requirements.txt
pocs/ollama/benchmark/: Readme.md  benchmark.py
