[tool.poetry]
name = "trip_planner_crew"
version = "0.1.0"
description = "trip_planner_crew using crewAI"
authors = ["Vinicius Feitosa da Silva <oviniciusfeitosa@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}

[tool.poetry.scripts]
# trip_planner_crew = "trip_planner_crew.main:run"
trip_planner_crew = "trip_planner_crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"